@@ -1,3 +1,4 @@
+1/17/12 cleanup the number formatter that displays zero as "0" (no decimal places)
 1/17/12 show min/max/current value on sliders, switch between quantitative and qualitative
 1/17/12 generalize the label that can be switched between quantitative and qualitative representations
 1/16/12 add "non-interactive" message to beaker
